Updating to latest atlaslatex

--- a/bib/PubNotes.bib
+++ b/bib/PubNotes.bib
@@ -1,4 +1,4 @@
-% Created on 2019-09-10 18:39:06
+% Created on 2020-07-15 16:12:25
 % Note that this file can be overwritten when atlaslatex is updated.
 
 @Booklet{ATL-LARG-PUB-2008-002,
@@ -793,19 +793,19 @@
     year           = "2014",
 }
 
+@Booklet{ATL-SOFT-PUB-2014-001,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Performance of the Fast ATLAS Tracking Simulation (FATRAS) and the ATLAS Fast Calorimeter Simulation (FastCaloSim) with single particles}",
+    howpublished   = "{ATL-SOFT-PUB-2014-001}",
+    url            = "https://cds.cern.ch/record/1669341",
+    year           = "2014",
+}
+
 @Booklet{ATL-SOFT-PUB-2014-003,
     author         = "{ATLAS Collaboration}",
     title          = "{Common Framework Implementation for the Track-Based Alignment of the ATLAS Detector}",
     howpublished   = "{ATL-SOFT-PUB-2014-003}",
     url            = "https://cds.cern.ch/record/1670354",
-    year           = "2014",
-}
-
-@Booklet{ATL-SOFT-PUB-2014-01,
-    author         = "{ATLAS Collaboration}",
-    title          = "{Performance of the Fast ATLAS Tracking Simulation (FATRAS) and the ATLAS Fast Calorimeter Simulation (FastCaloSim) with single particles}",
-    howpublished   = "{ATL-SOFT-PUB-2014-01}",
-    url            = "https://cds.cern.ch/record/1669341",
     year           = "2014",
 }
 
@@ -846,6 +846,14 @@
     title          = "{Texas Instruments TPS7H1101-SP Fast Neutron Irradiation Results}",
     howpublished   = "{ATL-MUON-PUB-2015-002}",
     url            = "https://cds.cern.ch/record/2054955",
+    year           = "2015",
+}
+
+@Booklet{ATL-OREACH-PUB-2015-001,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Building Blocks of the Universe using stackable plastic bricks to impart knowledge in particle physics}",
+    howpublished   = "{ATL-OREACH-PUB-2015-001}",
+    url            = "https://cds.cern.ch/record/2057226",
     year           = "2015",
 }
 
@@ -941,7 +949,7 @@
     author         = "{ATLAS Collaboration}",
     title          = "{Cluster Properties and Lorentz Angle Measurement in the 4-Layer Pixel Detector Using Cosmic Rays}",
     howpublished   = "{ATL-PHYS-PUB-2015-012}",
-    url            = "https://cds.cern.ch/record/2020912",
+    url            = "https://cds.cern.ch/record/2020918",
     year           = "2015",
 }
 
@@ -1653,7 +1661,7 @@
     author         = "{ATLAS Collaboration}",
     title          = "{Proton tagging with the one arm AFP detector}",
     howpublished   = "{ATL-PHYS-PUB-2017-012}",
-    url            = "https://cds.cern.ch/record/2265187",
+    url            = "https://cds.cern.ch/record/2273274",
     year           = "2017",
 }
 
@@ -2037,15 +2045,7 @@
     author         = "{ATLAS Collaboration}",
     title          = "{Sensitivity of the ATLAS experiment to long-lived particles with a displaced vertex and \(E_{\text{T}}^{\text{miss}}\) signature at the HL-LHC}",
     howpublished   = "{ATL-PHYS-PUB-2018-033}",
-    url            = "https://cds.cern.ch/record/2639896",
-    year           = "2018",
-}
-
-@Booklet{ATL-PHYS-PUB-2018-034,
-    author         = "{ATLAS Collaboration}",
-    title          = "{Top Working Group Summary Plots Autumn 2018}",
-    howpublished   = "{ATL-PHYS-PUB-2018-034}",
-    url            = "https://cds.cern.ch/record/2647993",
+    url            = "https://cds.cern.ch/record/2647992",
     year           = "2018",
 }
 
@@ -2109,7 +2109,7 @@
     author         = "{ATLAS Collaboration}",
     title          = "{Prospects for measurement of the top quark mass using \(t\bar{t}\) events with \(J/\psi \to \mu^+ \mu^-\) decays with the upgraded ATLAS detector at the High Luminosity LHC}",
     howpublished   = "{ATL-PHYS-PUB-2018-042}",
-    url            = "https://cds.cern.ch/record/2628125",
+    url            = "https://cds.cern.ch/record/2649882",
     year           = "2018",
 }
 
@@ -2126,22 +2126,6 @@
     title          = "{Prospects for searches for heavy \(Z'\) and \(W'\) bosons in fermionic final states with the ATLAS experiment at the HL-LHC}",
     howpublished   = "{ATL-PHYS-PUB-2018-044}",
     url            = "https://cds.cern.ch/record/2650549",
-    year           = "2018",
-}
-
-@Booklet{ATL-PHYS-PUB-2018-045,
-    author         = "{ATLAS Collaboration}",
-    title          = "{HBSM Working Group 2HDM+S Summary Plots}",
-    howpublished   = "{ATL-PHYS-PUB-2018-045}",
-    url            = "https://cds.cern.ch/record/2648769",
-    year           = "2018",
-}
-
-@Booklet{ATL-PHYS-PUB-2018-046,
-    author         = "{ATLAS Collaboration}",
-    title          = "{SUSY Summary Plots, November 2018}",
-    howpublished   = "{ATL-PHYS-PUB-2018-046}",
-    url            = "https://cds.cern.ch/record/2651265",
     year           = "2018",
 }
 
@@ -2225,6 +2209,22 @@
     year           = "2018",
 }
 
+@Booklet{ATL-DAQ-PUB-2019-001,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Trigger Menu in 2018}",
+    howpublished   = "{ATL-DAQ-PUB-2019-001}",
+    url            = "https://cds.cern.ch/record/2693402",
+    year           = "2019",
+}
+
+@Booklet{ATL-INDET-PUB-2019-001,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of radiation damage through leakage current monitoring of the ATLAS Pixel Detector}",
+    howpublished   = "{ATL-INDET-PUB-2019-001}",
+    url            = "https://cds.cern.ch/record/2699903",
+    year           = "2019",
+}
+
 @Booklet{ATL-PHYS-PUB-2019-001,
     author         = "{ATLAS Collaboration}",
     title          = "{Sensitivity of searches for the flavour-changing neutral current decay \(t \to qZ\) using the upgraded ATLAS experiment at the High Luminosity LHC}",
@@ -2273,14 +2273,6 @@
     year           = "2019",
 }
 
-@Booklet{ATL-PHYS-PUB-2019-007,
-    author         = "{ATLAS Collaboration}",
-    title          = "{Validation of signal Monte Carlo event generation in searches for Higgs boson pairs with the ATLAS detector}",
-    howpublished   = "{ATL-PHYS-PUB-2019-007}",
-    url            = "https://cds.cern.ch/record/2665057",
-    year           = "2019",
-}
-
 @Booklet{ATL-PHYS-PUB-2019-008,
     author         = "{ATLAS Collaboration}",
     title          = "{Probing the \(\mathcal{CP}\) nature of the Higgs boson coupling to \(\tau\) leptons at HL-LHC}",
@@ -2297,27 +2289,11 @@
     year           = "2019",
 }
 
-@Booklet{ATL-PHYS-PUB-2019-010,
-    author         = "{ATLAS Collaboration}",
-    title          = "{Standard Model Summary Plots Spring 2019}",
-    howpublished   = "{ATL-PHYS-PUB-2019-010}",
-    url            = "https://cds.cern.ch/record/2668559",
-    year           = "2019",
-}
-
 @Booklet{ATL-PHYS-PUB-2019-011,
     author         = "{ATLAS Collaboration}",
     title          = "{Performance of tracking and vertexing techniques for a disappearing track plus soft track signature with the ATLAS detector}",
     howpublished   = "{ATL-PHYS-PUB-2019-011}",
     url            = "https://cds.cern.ch/record/2669015",
-    year           = "2019",
-}
-
-@Booklet{ATL-PHYS-PUB-2019-012,
-    author         = "{ATLAS Collaboration}",
-    title          = "{SUSY March 2019 Summary Plot Update}",
-    howpublished   = "{ATL-PHYS-PUB-2019-012}",
-    url            = "https://cds.cern.ch/record/2669016",
     year           = "2019",
 }
 
@@ -2341,7 +2317,7 @@
     author         = "{ATLAS Collaboration}",
     title          = "{Development of ATLAS Primary Vertex Reconstruction for LHC Run 3}",
     howpublished   = "{ATL-PHYS-PUB-2019-015}",
-    url            = "https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-PHYS-PUB-2019-015",
+    url            = "https://cds.cern.ch/record/2670380",
     year           = "2019",
 }
 
@@ -2377,46 +2353,6 @@
     year           = "2019",
 }
 
-@Booklet{ATL-PHYS-PUB-2019-020,
-    author         = "{ATLAS Collaboration}",
-    title          = "{Top Quark Mass Summary Plots}",
-    howpublished   = "{ATL-PHYS-PUB-2019-020}",
-    url            = "https://cds.cern.ch/record/2673730",
-    year           = "2019",
-}
-
-@Booklet{ATL-PHYS-PUB-2019-021,
-    author         = "{ATLAS and CMS Collaborations}",
-    title          = "{Comparison of ATLAS and CMS \(t\bar{t}\) Monte Carlo simulation}",
-    howpublished   = "{ATL-PHYS-PUB-2019-021}",
-    url            = "https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-PHYS-PUB-2019-021",
-    year           = "2019",
-}
-
-@Booklet{ATL-PHYS-PUB-2019-022,
-    author         = "{ATLAS Collaboration}",
-    title          = "{SUSY July 2019 Summary Plot Update}",
-    howpublished   = "{ATL-PHYS-PUB-2019-022}",
-    url            = "https://cds.cern.ch/record/2682063",
-    year           = "2019",
-}
-
-@Booklet{ATL-PHYS-PUB-2019-023,
-    author         = "{ATLAS Collaboration}",
-    title          = "{Summary Plots for Exotics Heavy Particle Searches and Exotics/SUSY Long-lived Particle Searches}",
-    howpublished   = "{ATL-PHYS-PUB-2019-023}",
-    url            = "https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-PHYS-PUB-2019-023",
-    year           = "2019",
-}
-
-@Booklet{ATL-PHYS-PUB-2019-024,
-    author         = "{ATLAS Collaboration}",
-    title          = "{Standard Model Summary Plots Summer 2019}",
-    howpublished   = "{ATL-PHYS-PUB-2019-024}",
-    url            = "https://cds.cern.ch/record/2682186",
-    year           = "2019",
-}
-
 @Booklet{ATL-PHYS-PUB-2019-025,
     author         = "{ATLAS Collaboration}",
     title          = "{Transverse momentum response and reconstruction efficiency for jets from displaced decays in the ATLAS detector}",
@@ -2439,5 +2375,149 @@
     howpublished   = "{ATL-PHYS-PUB-2019-027}",
     url            = "https://cds.cern.ch/record/2683619",
     year           = "2019",
+}
+
+@Booklet{ATL-PHYS-PUB-2019-028,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Convolutional Neural Networks with Event Images for Pileup Mitigation in \(E_{\text{T}}^{\text{miss}}\) reconstruction with the ATLAS Detector}",
+    howpublished   = "{ATL-PHYS-PUB-2019-028}",
+    url            = "https://cds.cern.ch/record/2684070",
+    year           = "2019",
+}
+
+@Booklet{ATL-PHYS-PUB-2019-029,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Reproduction searches for new physics with the ATLAS experiment through publication of full statistical likelihoods}",
+    howpublished   = "{ATL-PHYS-PUB-2019-029}",
+    url            = "https://cds.cern.ch/record/2684863",
+    year           = "2019",
+}
+
+@Booklet{ATL-PHYS-PUB-2019-032,
+    author         = "{ATLAS Collaboration}",
+    title          = "{RECAST framework reinterpretation of an ATLAS Dark Matter Search constraining a model of a dark Higgs boson decaying to two \(b\)-quarks}",
+    howpublished   = "{ATL-PHYS-PUB-2019-032}",
+    url            = "https://cds.cern.ch/record/2686290",
+    year           = "2019",
+}
+
+@Booklet{ATL-PHYS-PUB-2019-033,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Identification of hadronic tau lepton decays using neural networks in the ATLAS experiment}",
+    howpublished   = "{ATL-PHYS-PUB-2019-033}",
+    url            = "https://cds.cern.ch/record/2688062",
+    year           = "2019",
+}
+
+@Booklet{ATL-PHYS-PUB-2019-039,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Improved description of the di-tau final state in events with associated production of a \(W\) boson and jets in the ATLAS detector using the tau-promotion method}",
+    howpublished   = "{ATL-PHYS-PUB-2019-039}",
+    url            = "https://cds.cern.ch/record/2692073",
+    year           = "2019",
+}
+
+@Booklet{ATL-PHYS-PUB-2019-041,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Fast Track Reconstruction for HL-LHC}",
+    howpublished   = "{ATL-PHYS-PUB-2019-041}",
+    url            = "https://cds.cern.ch/record/2693670",
+    year           = "2019",
+}
+
+@Booklet{ATL-PHYS-PUB-2019-042,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Methodology for EFT interpretation of Higgs boson simplified template cross-section results in ATLAS}",
+    howpublished   = "{ATL-PHYS-PUB-2019-042}",
+    url            = "https://cds.cern.ch/record/2694284",
+    year           = "2019",
+}
+
+@Booklet{ATL-FWD-PUB-2020-001,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of beam background in special high-\(\beta^*\) LHC runs at \(\sqrt(s) = 900\,\text{GeV}\) using the ATLAS-ALFA detectors}",
+    howpublished   = "{ATL-FWD-PUB-2020-001}",
+    url            = "https://cds.cern.ch/record/2717459",
+    year           = "2020",
+}
+
+@Booklet{ATL-OREACH-PUB-2020-001,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Review of the \(13\,\text{TeV}\) ATLAS Open Data release}",
+    howpublished   = "{ATL-OREACH-PUB-2020-001}",
+    url            = "https://cds.cern.ch/record/2707171",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-001,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Simultaneous Jet Energy and Mass Calibrations with Neural Networks}",
+    howpublished   = "{ATL-PHYS-PUB-2020-001}",
+    url            = "https://cds.cern.ch/record/2706189",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-002,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Identification of very-low transverse momentum muons in the ATLAS experiment}",
+    howpublished   = "{ATL-PHYS-PUB-2020-002}",
+    url            = "https://cds.cern.ch/record/2710574",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-003,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Compilation plots of Run~2 Heavy Ions results for Quark Matter 2019}",
+    howpublished   = "{ATL-PHYS-PUB-2020-003}",
+    url            = "https://cds.cern.ch/record/2710577",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-004,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Optimisation of the smoothing of \(b\)-jet identification efficiency and mistag rate simulation-to-data scale factors in ATLAS}",
+    howpublished   = "{ATL-PHYS-PUB-2020-004}",
+    url            = "https://cds.cern.ch/record/2710598",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-005,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Expected \(b\)-tagging Performance with the upgraded ATLAS Inner Tracker Detector at the High-Luminosity LHC}",
+    howpublished   = "{ATL-PHYS-PUB-2020-005}",
+    url            = "https://cds.cern.ch/record/2713377",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-007,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Reinterpretation of the ATLAS Search for Displaced Hadronic Jets with the RECAST Framework}",
+    howpublished   = "{ATL-PHYS-PUB-2020-007}",
+    url            = "https://cds.cern.ch/record/2714064",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-008,
+    author         = "{ATLAS Collaboration}",
+    title          = "{A \(W/Z\)-boson tagger using Track-CaloCluster jets with ATLAS}",
+    howpublished   = "{ATL-PHYS-PUB-2020-008}",
+    url            = "https://cds.cern.ch/record/2718218",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-009,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Monte Carlo to Monte Carlo scale factors for flavour tagging efficiency calibration}",
+    howpublished   = "{ATL-PHYS-PUB-2020-009}",
+    url            = "https://cds.cern.ch/record/2718610",
+    year           = "2020",
+}
+
+@Booklet{ATL-PHYS-PUB-2020-014,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Deep Sets based Neural Networks for Impact Parameter Flavour Tagging in ATLAS}",
+    howpublished   = "{ATL-PHYS-PUB-2020-014}",
+    url            = "https://cds.cern.ch/record/2718948",
+    year           = "2020",
 }
 
