--- a/bib/ConfNotes.bib
+++ b/bib/ConfNotes.bib
@@ -1,4 +1,4 @@
-% Created on 2019-09-10 18:38:49
+% Created on 2020-07-15 16:11:37
 % Note that this file can be overwritten when atlaslatex is updated.
 
 @Booklet{ATLAS-CONF-2010-001,
@@ -6053,7 +6053,7 @@
     author         = "{ATLAS Collaboration}",
     title          = "{Combination of the searches for Higgs boson production in association with top quarks in the \(\gamma \gamma\), multilepton, and \(b\bar{b}\) decay channels at \(\sqrt{s} = 13~\text{TeV}\) with the ATLAS Detector}",
     howpublished   = "{ATLAS-CONF-2016-068}",
-    url            = "https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/CONFNOTES/ATLAS-CONF-2016-068/",
+    url            = "https://cds.cern.ch/record/2206211",
     year           = "2016",
 }
 
@@ -6149,7 +6149,7 @@
     author         = "{ATLAS Collaboration}",
     title          = "{Search for the Standard Model Higgs boson produced in association with top quarks and decaying into a \(b\bar{b}\) pair in \(pp\) collisions at \(\sqrt{s} = 13~\text{TeV}\) with the ATLAS detector}",
     howpublished   = "{ATLAS-CONF-2016-080}",
-    url            = "https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/CONFNOTES/ATLAS-CONF-2016-080/",
+    url            = "https://cds.cern.ch/record/2206255",
     year           = "2016",
 }
 
@@ -7197,7 +7197,7 @@
     author         = "{ATLAS Collaboration}",
     title          = "{Search for diboson resonances in hadronic final states in \(79.8~\text{fb}^{-1}\) of \(pp\) collisions at \(\sqrt{s} = 13~\text{TeV}\) with the ATLAS detector}",
     howpublished   = "{ATLAS-CONF-2018-016}",
-    url            = "https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/CONFNOTES/ATLAS-CONF-2018-016/",
+    url            = "https://cds.cern.ch/record/2621302",
     year           = "2018",
 }
 
@@ -7791,5 +7791,333 @@
     howpublished   = "{ATLAS-CONF-2019-035}",
     url            = "https://cds.cern.ch/record/2683993",
     year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-036,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for a new resonance in the \(bj\mu\mu\) final state at a dimuon invariant mass around \(28\,\text{GeV}\) with ATLAS \(pp\) data collected at \(\sqrt{s} = 8\) and \(13\,\text{TeV}\)}",
+    howpublished   = "{ATLAS-CONF-2019-036}",
+    url            = "https://cds.cern.ch/record/2684853",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-037,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for the decays of the Higgs boson \(H \to ee\) and \(H \to e\mu\) in \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-037}",
+    url            = "https://cds.cern.ch/record/2685338",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-038,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of the top-quark decay width in top-quark pair events in the dilepton channel at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-038}",
+    url            = "https://cds.cern.ch/record/2684952",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-039,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Evidence for electroweak production of two jets in association with a \(Z\gamma\) pair in \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-039}",
+    url            = "https://cds.cern.ch/record/2686248",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-040,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for squarks and gluinos in final states with jets and missing transverse momentum using \(139\,\text{fb}^{-1}\) of \(\sqrt{s} = 13\,\text{TeV}\) \(pp\) collision data with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-040}",
+    url            = "https://cds.cern.ch/record/2686254",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-041,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of the \(t\bar{t}\) production cross-section and lepton differential distributions in \(e\mu\) dilepton events from \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-041}",
+    url            = "https://cds.cern.ch/record/2686255",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-042,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurements of inclusive and differential cross-sections of \(t\bar{t}\gamma\) production in the \(e\mu\) channel at \(13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-042}",
+    url            = "https://cds.cern.ch/record/2690350",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-043,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Observation of the associated production of a top quark and a \(Z\) boson in \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-043}",
+    url            = "https://cds.cern.ch/record/2690716",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-044,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of the \(t\bar{t}\) production cross-section in the lepton+jets channel at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS experiment}",
+    howpublished   = "{ATLAS-CONF-2019-044}",
+    url            = "https://cds.cern.ch/record/2690717",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-045,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Analysis of \(t\bar{t}H\) and \(t\bar{t}W\) production in multilepton final states with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-045}",
+    url            = "https://cds.cern.ch/record/2693930",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-046,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of the top quark mass using a leptonic invariant mass in \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-046}",
+    url            = "https://cds.cern.ch/record/2693954",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-047,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of the production cross-section of \(J/\psi\) and \(\psi(2\text{S})\) mesons at high transverse momentum in  \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-047}",
+    url            = "https://cds.cern.ch/record/2693955",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-048,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Study of \(J/\psi p\) resonances in the \(\Lambda^0_b \to J/\psi pK^-\) decays in \(pp\) collisions at \(\sqrt{s} = 7\) and \(8\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-048}",
+    url            = "https://cds.cern.ch/record/2693957",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-049,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Constraints on the Higgs boson self-coupling from the combination of single-Higgs and double-Higgs production analyses performed with the ATLAS experiment}",
+    howpublished   = "{ATLAS-CONF-2019-049}",
+    url            = "https://cds.cern.ch/record/2693958",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-050,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Test of CP invariance in vector-boson fusion production of the Higgs boson in the \(H \to \tau\tau\) channel in proton--proton collisions at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-050}",
+    url            = "https://cds.cern.ch/record/2693960",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-051,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of non-exclusive dimuon pairs produced via \(\gamma\gamma\) scattering in Pb+Pb collisions at \(\sqrt{s_{\text{NN}}} = 5.02\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-051}",
+    url            = "https://cds.cern.ch/record/2698293",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-052,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of \(Z\)-tagged charged-particle yields in \(5.02\,\text{TeV}\) Pb+Pb and \(pp\) collisions with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-052}",
+    url            = "https://cds.cern.ch/record/2698294",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-053,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of azimuthal anisotropy of muons from charm and bottom hadrons in Pb+Pb collisions at \(\sqrt{s_{\text{NN}}} = 5.02\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-053}",
+    url            = "https://cds.cern.ch/record/2698295",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-054,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Production of \(\Upsilon\)(nS) mesons in Pb+Pb and \(pp\) collisions at \(5.02\,\text{TeV}\) with ATLAS}",
+    howpublished   = "{ATLAS-CONF-2019-054}",
+    url            = "https://cds.cern.ch/record/2698298",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-055,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Longitudinal flow decorrelations in Xe+Xe collisions at \(\sqrt{s_{\text{NN}}} = 5.44\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-055}",
+    url            = "https://cds.cern.ch/record/2698300",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2019-056,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of suppression of large-radius jets and its dependence on substructure in Pb+Pb at \(5.02\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2019-056}",
+    url            = "https://cds.cern.ch/record/2701506",
+    year           = "2019",
+}
+
+@Booklet{ATLAS-CONF-2020-001,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurements of top-quark pair single- and double-differential cross-sections in the all-hadronic channel in \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\) using the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-001}",
+    url            = "https://cds.cern.ch/record/2709416",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-002,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for new phenomena in final states with large jet multiplicities and missing transverse momentum using \(\sqrt{s} = 13\,\text{TeV}\) proton--proton collisions recorded by ATLAS in Run 2 of the LHC}",
+    howpublished   = "{ATLAS-CONF-2020-002}",
+    url            = "https://cds.cern.ch/record/2710420",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-003,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for new phenomena with top quark pairs in final states with one lepton, jets, and missing transverse momentum in \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-003}",
+    url            = "https://cds.cern.ch/record/2711489",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-004,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for a scalar partner of the top quark in the all-hadronic \(t\bar{t}\) plus missing transverse momentum final state at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-004}",
+    url            = "https://cds.cern.ch/record/2711490",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-005,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of the Higgs boson mass in the \(H\to ZZ^* \to 4\ell\) decay channel with \(\sqrt{s} = 13\,\text{TeV}\) \(pp\) collisions using the ATLAS detector at the LHC}",
+    howpublished   = "{ATLAS-CONF-2020-005}",
+    url            = "https://cds.cern.ch/record/2714883",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-006,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurements of \(WH\) and \(ZH\) production in the \(H \to b\bar{b}\) decay channel in \(pp\) collisions at \(13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-006}",
+    url            = "https://cds.cern.ch/record/2714885",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-007,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of the associated production of a Higgs boson decaying to \(b\) quarks with a vector boson at high transverse momentum in \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-007}",
+    url            = "https://cds.cern.ch/record/2715063",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-008,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for invisible Higgs boson decays with vector boson fusion signatures with the ATLAS detector using an integrated luminosity of \(139\,\text{fb}^{-1}\)}",
+    howpublished   = "{ATLAS-CONF-2020-008}",
+    url            = "https://cds.cern.ch/record/2715447",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-009,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for trilepton resonances from chargino and neutralino pair production in \(\sqrt{s} = 13\,\text{TeV}\) \(pp\) collisions with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-009}",
+    url            = "https://cds.cern.ch/record/2715448",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-010,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of light-by-light scattering and search for axion-like particles with \(2.2\, nb^{-1}\) of Pb+Pb data with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-010}",
+    url            = "https://cds.cern.ch/record/2719516",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-011,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of hadronic event shapes in multijet final states at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-011}",
+    url            = "https://cds.cern.ch/record/2719517",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-012,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Reconstruction and identification of boosted di-\(\tau\) systems in a search for Higgs boson pairs using \(13\,\text{TeV}\) proton--proton collision data in ATLAS}",
+    howpublished   = "{ATLAS-CONF-2020-012}",
+    url            = "https://cds.cern.ch/record/2719518",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-013,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Evidence for \(t\bar{t}t\bar{t}\) production in the multilepton final state in proton--proton collisions at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-013}",
+    url            = "https://cds.cern.ch/record/2719519",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-014,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Test of the universality of \(\tau\) and \(\mu\) lepton couplings in \(W\) boson decays from \(t\bar{t}\) events at \(13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-014}",
+    url            = "https://cds.cern.ch/record/2719520",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-015,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for chargino-neutralino pair production in final states with three leptons and missing transverse momentum in \(\sqrt{s} = 13\,\text{TeV}\) \(pp\) collisions with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-015}",
+    url            = "https://cds.cern.ch/record/2719521",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-016,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for phenomena beyond the Standard Model in events with large \(b\)-jet multiplicity using the ATLAS detector at the LHC}",
+    howpublished   = "{ATLAS-CONF-2020-016}",
+    url            = "https://cds.cern.ch/record/2720246",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-017,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of the dijet momentum balance in Pb+Pb and \(pp\) collisions at \(\sqrt{s_{\text{NN}}} = 5.02\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-017}",
+    url            = "https://cds.cern.ch/record/2720247",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-018,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurement of the sensitivity of two particle correlations in \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\) to the presence of jets with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-018}",
+    url            = "https://cds.cern.ch/record/2720248",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-019,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Measurements of Jet Azimuthal Anisotropies in Pb+Pb collisions at \(\sqrt{s_{\text{NN}}} = 5.02\,\text{TeV}\)}",
+    howpublished   = "{ATLAS-CONF-2020-019}",
+    url            = "https://cds.cern.ch/record/2720249",
+    year           = "2020",
+}
+
+@Booklet{ATLAS-CONF-2020-020,
+    author         = "{ATLAS Collaboration}",
+    title          = "{Search for dark matter in association with an energetic photon in \(pp\) collisions at \(\sqrt{s} = 13\,\text{TeV}\) with the ATLAS detector}",
+    howpublished   = "{ATLAS-CONF-2020-020}",
+    url            = "https://cds.cern.ch/record/2720250",
+    year           = "2020",
 }
 
